Foto's op verkooppagina naar origineel formaat gewijzigd

--- a/css/contact.css
+++ b/css/contact.css
@@ -2945,6 +2945,9 @@ ul {
 }
 
 /* line 17, /Applications/MAMP/htdocs/palash/cl/august 2019/198 Animal adoption/198 Animal adoption html/sass/_contact.scss */
+.contact-info .media-body {
+  text-align: left;
+}
 .contact-info .media-body h3 {
   font-size: 22px;
   margin-bottom: 0;
